option('interfaces', type: 'array', choices: ['library', 'dbus', 'nodejs'], value: ['library'])
option('video', type: 'boolean', value: true, description: 'Enable video support')
option('hw_acceleration', type: 'boolean', value: true, description: 'Enable hardware acceleration')
option('plugins', type: 'boolean', value: true, description: 'Enable support for plugins')

option('name_service', type: 'feature', value: 'auto', description: 'Enable Name Service')
option('opensl', type: 'feature', value: 'auto', description: 'Enable support for OpenSL')
option('alsa', type: 'feature', value: 'auto', description: 'Enable support for ALSA')
option('pulseaudio', type: 'feature', value: 'auto', description: 'Enable support for PulseAudio')
option('jack', type: 'feature', value: 'auto', description: 'Enable support for Jack')
option('portaudio', type: 'feature', value: 'auto', description: 'Enable support for PortAudio')
option('upnp', type: 'feature', value: 'auto', description: 'Enable support for UPnP')
option('natpmp', type: 'feature', value: 'auto', description: 'Enable support for NAT-PMP')

# https://docs.jami.net/user/faq.html#how-can-i-configure-the-audio-processor
option('webrtc_ap', type: 'feature', value: 'auto', description: 'Enable support for WebRTC audio processing')
option('speex_ap', type: 'feature', value: 'auto', description: 'Enable support for Speex audio processing')

option('natpmp_prefix', type: 'string', value: '', description: 'Override a system directory to search for the library "natpmp"')
option('tests', type: 'boolean', value: false, description: 'Build tests')
option('tracepoints', type: 'boolean', value: false, description: 'Enable tracepoints')
